# snob-factor

./: .gitignore  CMakeLists.txt  MANIFEST.in  Makefile  README  README.md  badmoves.c  block.c  classes.c  cmake-build.py  doall.c  dotypes.c  expbin.c  expmults.c  glob.c  glob.h  go  inputs.c  listen.c  main.c  poplns.c  prompt.c  pyproject.toml  reals.c  requirements.txt  samples.c  saveit  setup.py  snob-factor  snob.c  snob.h  snob.py  tactics.c  test.sh  tune.c  vmtabs.c  vonm.c  vonm.ver1  vonm.ver2  vonm.ver3
.github/workflows/: build.yml  python-app.yml
docs/: guide.md  notes.md  vanilla.md
examples/: 5m1c.s  5m1c.v  5r8c.s  5r8c.v  6e1c.v  6m1c.cmd  6m1c.s  6m2r2c.s  6m2r2c.v  6r1b.cmd  6r1b.s  6r1b.v  6r1c.s  6r1c.v  6t1c.v  6t2r.v  DataFormat  d2.s  d2.v  d2r3m6.s  d2r3m6.v  dr3m6  phi.cmd  phi.s  phi.v  sd1.s  sd1.v  sst.csv  test.cmd  vm.cmd  vm.s  vm.v  vmd.s  xrf.csv  xrf.s  xrf.v
snob/: __init__.py  example.py  example2.py  example3.py  example4.py
src/: Makefile  badmoves.c  block.c  classes.c  doall.c  dotypes.c  expbin.c  expmults.c  glob.c  glob.h  inputs.c  main.c  poplns.c  reals.c  samples.c  snob.c  snob.h  tactics.c  tune.c  vmtabs.c  vonm.c
tests/: test.sh
